ready to make doggo

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <script src="../p5.js"></script>
     <script src="../addons/p5.func.js"></script>
+    <script src="../box2d/box2d-html5.js"></script>
+    <script src="../box2d/box2d-helper.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
     <script src="model_pca_20_svm.js"></script>
     <script src="clmtrackr.js"></script>
+    <script src="surface.js"></script>
+    <script src="dog1.js"></script>
     <script src="main.js"></script>
   </head>
   <body>
