baguette physics done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="clmtrackr.js"></script>
     <script src="surface.js"></script>
     <script src="dog1.js"></script>
+    <script src="particle.js"></script>
+    <script src="baguette.js"></script>
     <script src="main.js"></script>
   </head>
   <body>
